@@ -23,4 +23,16 @@ extern int loop;
 
 int listener(char *interface, unsigned short port);
 
+#ifdef THREAD_POOL
+#ifndef __WIN32__
+void* worker(int n);
+
+#ifdef SERVER_H // i need server_struct definition here
+
+int push_request(struct server_struct* request);
+int pop_request();
+#endif // SERVER_H
+#endif // __WIN32__
+#endif // THREAD_POOL
+
 #endif // LISTENER_H
