@@ -1,3 +1,8 @@
+Fri Feb 16 2007 Nickolas Grigoriadis <grigi_ at users.sourceforge.net>
+	- Applied a patch from Helc`Ainu to provide Linux port with thread
+	  pool support.
+	- Minor alterations to patch to fix race condition, and exit on flag
+
 Tue Feb 13 2007 Daniel Walker <djwalker at users.sourceforge.net>
 	- Fixed some errors with parsing % in URLs
 
